# vibeco

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  repomix.config.json
cmake/: FindPortAudio.cmake
resources/fonts/: fonts.qrc
resources/icons/: icons.qrc
resources/qml/: DictationWindow.qml  Style.qml  main.qml  qml.qrc  qtquickcontrols2.conf
resources/qml/components/: BottomControlBar.qml  DictationWidget.qml
src/gui/include/: QmlDictationManager.h  ShortcutManager.h  config.h  dictationwidget.h  settingsdialog.h  systemtrayhandler.h
src/gui/src/: QmlDictationManager.cpp  ShortcutManager.cpp  audiohandler.cpp  audiohandler.h  config.cpp  dictationwidget.cpp  main.cpp  settingsdialog.cpp  systemtrayhandler.cpp  transcriptionservice.cpp  transcriptionservice.h
